--- a/basemap.yaml
+++ b/basemap.yaml
@@ -5,10 +5,20 @@ layers:
     markerSymbol: false
     style:
       fill: true
-      color: '#c83737'
+      color: '#7f7f7f'
       width: 0.5
-      fillColor: '#e9afaf'
+      fillColor: '#3f3f3f'
       fillOpacity: 1
+
+- query: nwr[landuse=forest]
+  feature:
+    style:
+      fill: true
+      color: '#007f00'
+      width: 0.5
+      fillColor: '#87d187'
+      fillOpacity: 1
+      zIndex: -22
 
 - query: |
     (
@@ -23,11 +33,14 @@ layers:
       fill: false
       color: '#3f3f3f'
       dashArray: |
-        {% if tags.steps %}0,3{% endif %}
-      lineCap: round
+        {% if tags.highway == 'steps' %}1,1{% endif %}
+      dashOffset: |
+        {% if tags.highway == 'steps' %}0.5{% endif %}
+      lineCap: |
+        {{ tags.highway == 'steps' ? 'butt' : 'round' }}
 
       width: |
-        {% if tags.highway in ['footway', 'cycleway'] %}1
+        {% if tags.highway in ['footway', 'cycleway', 'steps'] %}1
         {% elseif tags.highway in ['service','track'] %}2
         {% else %}3
         {% endif %}
@@ -38,9 +51,9 @@ layers:
       color: '#000000'
       lineCap: butt
       width: |
-        {% if tags.highway in ['footway', 'cycleway'] %}3
-        {% elseif tags.highway in ['service','track'] %}4
-        {% else %}5
+        {% if tags.highway in ['footway', 'cycleway', 'steps'] %}4
+        {% elseif tags.highway in ['service','track'] %}5
+        {% else %}6
         {% endif %}
       zIndex: |
         {{ tags.layer|default(0) }}
@@ -49,9 +62,9 @@ layers:
       color: '#ffffff'
       lineCap: butt
       width: |
-        {% if tags.highway in ['footway', 'cycleway'] %}2
-        {% elseif tags.highway in ['service','track'] %}3
-        {% else %}4
+        {% if tags.highway in ['footway', 'cycleway', 'steps'] %}3
+        {% elseif tags.highway in ['service','track'] %}4
+        {% else %}5
         {% endif %}
       zIndex: |
         {{ tags.layer|default(0) }}
@@ -91,6 +104,7 @@ layers:
   feature:
     markerSymbol: false
     styles: |
+      back_casing,
       {% if tags.bridge %}bridge_casing,bridge,{% endif %}
       casing,default
     style:
@@ -107,13 +121,25 @@ layers:
         {% if tags.service %}{{ tags.layer|default(0) + 0.3 }}
         {% else %}{{ tags.layer|default(0) + 0.1 }}
         {% endif %}
-    style:casing:
+    style:back_casing:
       fill: false
       color: |
         {% if tags.tunnel %}#7f7f7f
         {% else %}#3f3f3f
         {% endif %}
       lineCap: round
+      width: |
+        {% if tags.service %}3
+        {% else %}4.5
+        {% endif %}
+      zIndex: -10
+    style:casing:
+      fill: false
+      color: |
+        {% if tags.tunnel %}#7f7f7f
+        {% else %}#3f3f3f
+        {% endif %}
+      lineCap: butt
       width: |
         {% if tags.service %}3
         {% else %}4.5
@@ -127,8 +153,8 @@ layers:
       color: '#000000'
       lineCap: butt
       width: |
-        {% if tags.service %}5
-        {% else %}6
+        {% if tags.service %}6
+        {% else %}7
         {% endif %}
       zIndex: |
         {% if tags.service %}{{ tags.layer|default(0) + 0.15 }}
@@ -139,23 +165,29 @@ layers:
       color: '#ffffff'
       lineCap: butt
       width: |
-        {% if tags.service %}4
-        {% else %}5
+        {% if tags.service %}5
+        {% else %}6
         {% endif %}
       zIndex: |
         {% if tags.service %}{{ tags.layer|default(0) + 0.15 }}
         {% else %}{{ tags.layer|default(0) - 0.05 }}
         {% endif %}
 
-- query: way[natural=water]
+- query: nwr[natural=water]
   feature:
     styles: casing,default
     style:
+      fill: true
+      fillColor: '#2ed4ff'
+      fillOpacity: 1
       color: '#2e82ff'
-      width: 0.5
+      width: 0
       zIndex: -20
       lineCap: round
     style:casing:
+      fill: true
+      color: '#2e82ff'
+      width: 1
       fillColor: '#2ed4ff'
       fillOpacity: 1
       zIndex: -21
