--- a/railway.yaml
+++ b/railway.yaml
@@ -1,6 +1,7 @@
 background: '#00000000'
 layers:
-- query: way[railway=rail][!service]
+- query:
+    10: way[railway=rail][!service]
   feature:
     pre: |
       {% set dir = 0 %}
@@ -17,9 +18,10 @@ layers:
         {% if tags.tunnel %}#7f7f7f
         {% else %}#3f3f3f
         {% endif %}
-      width: 3
+      width: |
+        {{ const.railway.width }}
       offset: |
-        {{ dir * 2 }}
+        {{ const.railway.offset * dir }}
       lineCap: butt
     style:back:
       fill: false
@@ -27,29 +29,33 @@ layers:
         {% if tags.tunnel %}#7f7f7f
         {% else %}#3f3f3f
         {% endif %}
-      width: 3
+      width: |
+        {{ const.railway.width }}
       offset: |
-        {{ dir * 2 }}
+        {{ const.railway.offset * dir }}
       lineCap: round
       zIndex: -11
     style:bridge:
       fill: false
       lineCap: round
       color: '#000000'
-      width: 1
+      width: |
+        {{ const.bridge.width }}
       offset: |
-        {{ dir * 5 }}
+        {{ dir * (const.railway.width / 2 + const.railway.offset + const.bridge.offset) }}
       zIndex: -10.5
     style:bridge_both:
       fill: false
       lineCap: round
       color: '#000000'
-      width: 1
+      width: |
+        {{ const.bridge.width }}
       offset: |
         {{ dir * -5 }}
       zIndex: -10.5
 
-- query: nwr[railway=station][operator~"BB"]
+- query:
+    10: nwr[railway=station][operator~"BB"]
   feature:
     styles: default,text
     style:
@@ -68,6 +74,14 @@ layers:
       textFontSize: 16
       textHaloColor: '#ffffff'
       textHaloRadius: 1
-      textDY: 10
+      textMoveY: 10
       text: |
         {{ tags.name }}
+
+const:
+  railway:
+    width: 3
+    offset: 2
+  bridge:
+    width: 1
+    offset: 1.5
